# sorte-io

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  sql_app.db  test_main.http
docs/: PróximosPassos.txt
src/application/entities/: lottery.py  number.py  payment.py  user.py
src/application/service/: login_service.py  lottery_service.py  number_service.py  payment_service.py  user_service.py
src/infra/config/: database.py
src/infra/models/: models.py
src/infra/repositories/: lottery_repository.py  number_repository.py  payment_repository.py  user_repository.py
src/infra/repository/: dao_user.py
src/routes/: login_route.py  lottery.py  lottery_route.py  number_route.py  payment_route.py  user.py  user_route.py
src/schemas/: schemas.py
tests/: test_user_entities.py
